--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ dependencyManagement {
 	imports {
 		mavenBom "org.testcontainers:testcontainers-bom:1.19.8"
 	}
+	dependencies {
+		// Force Elasticsearch Java client to match server version 8.15.3
+		dependency "co.elastic.clients:elasticsearch-java:8.15.3"
+		dependency "org.elasticsearch.client:elasticsearch-rest-client:8.15.3"
+	}
 }
 
 group = 'com.make'
@@ -31,9 +36,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation('org.springframework.boot:spring-boot-starter-data-elasticsearch') {
+		exclude group: 'co.elastic.clients', module: 'elasticsearch-java'
+	}
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Elasticsearch 8.15.3 Java client dependencies - explicit versions
+	implementation 'co.elastic.clients:elasticsearch-java:8.15.3'
+	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
+	implementation 'jakarta.json:jakarta.json-api:2.1.3'
+	implementation 'org.glassfish:jakarta.json:2.0.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
