upgrade to spring boot 4.0.1 wip

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -40,3 +40,7 @@ spring:
     elasticsearch:
       repositories:
         enabled: true
+
+# Elasticsearch client configuration (custom property)
+ee:
+  server-url: localhost:9200
