--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.9'
+	id 'org.springframework.boot' version '4.0.1'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -37,13 +37,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation('org.springframework.boot:spring-boot-starter-data-elasticsearch') {
-		exclude group: 'co.elastic.clients', module: 'elasticsearch-java'
-	}
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// Elasticsearch 8.15.3 Java client dependencies - explicit versions
+	// Elasticsearch 8.15.3 Java client dependencies
 	implementation 'co.elastic.clients:elasticsearch-java:8.15.3'
-	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
 	implementation 'jakarta.json:jakarta.json-api:2.1.3'
 	implementation 'org.glassfish:jakarta.json:2.0.1'
 	compileOnly 'org.projectlombok:lombok'
