--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// Elasticsearch 8.15.3 Java client dependencies
-	implementation 'co.elastic.clients:elasticsearch-java:8.15.3'
+	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
 	implementation 'jakarta.json:jakarta.json-api:2.1.3'
 	implementation 'org.glassfish:jakarta.json:2.0.1'
 	compileOnly 'org.projectlombok:lombok'
@@ -56,4 +55,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	failOnNoDiscoveredTests = false
 }
