--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,17 +23,14 @@ spring:
         format_sql: true
         jdbc:
           time_zone: UTC
-  # SQL initialization scripts - runs on startup BEFORE Tomcat starts
-  # Spring Boot ensures SQL init completes before web server (Tomcat) starts
   sql:
     init:
-      mode: always  # Always run scripts on startup (creates fresh tables)
+      mode: always
       schema-locations: classpath:schema.sql
-      data-locations: classpath:data.sql  # Optional - can be empty
+      data-locations: classpath:data.sql
       continue-on-error: false
-  # Elasticsearch configuration for 8.15.3 compatibility
   elasticsearch:
-    uris: http://localhost:9200
+    uris: localhost:9200
     connection-timeout: 10s
     socket-timeout: 60s
   data:
