--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation ('org.springframework.boot:spring-boot-starter-data-elasticsearch')
-	implementation ('org.springframework.data:spring-data-elasticsearch')
-	implementation 'org.apache.httpcomponents:httpasyncclient:4.1.5'
-	implementation 'org.apache.httpcomponents:httpcore:4.4.16'
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
