--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,9 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	// elastic search test
-	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
+	implementation('org.elasticsearch.client:elasticsearch-rest-client:8.15.3') {
+		exclude group: 'commons-logging', module: 'commons-logging'
+	}
 }
 
 tasks.named('test') {
