--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ dependencyManagement {
 	imports {
 		mavenBom "org.testcontainers:testcontainers-bom:1.19.8"
 	}
+	dependencies {
+		// Force Elasticsearch client versions to 8.15.3
+		dependency "org.elasticsearch.client:elasticsearch-rest-client:8.15.3"
+		// dependency "co.elastic.clients:elasticsearch-java:8.15.3"
+		// Source: https://mvnrepository.com/artifact/org.springframework.data/spring-data-elasticsearch
+		// dependency 'org.springframework.data:spring-data-elasticsearch:5.5.7'
+	}
 }
 
 group = 'com.make'
@@ -24,6 +31,12 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	all {
+		resolutionStrategy {
+			// force 'co.elastic.clients:elasticsearch-java:8.15.3'
+			force 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
+		}
+	}
 }
 
 repositories {
@@ -32,7 +45,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+	implementation('org.springframework.boot:spring-boot-starter-data-elasticsearch') {
+		// exclude group: 'co.elastic.clients', module: 'elasticsearch-java'
+		// exclude group: 'co.elastic.clients', module: 'elasticsearch-rest5-client'
+		exclude group: 'org.elasticsearch.client', module: 'elasticsearch-rest-client'
+	}
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -44,10 +61,19 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	// elastic search test
+	// Elasticsearch client dependencies - force version 8.15.3 to match server
 	implementation('org.elasticsearch.client:elasticsearch-rest-client:8.15.3') {
 		exclude group: 'commons-logging', module: 'commons-logging'
 	}
+	// implementation('co.elastic.clients:elasticsearch-java:8.15.3')
+	
+	// Required for Elasticsearch Java client
+	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+	implementation 'org.apache.httpcomponents:httpcore:4.4.16'
+	implementation 'org.apache.httpcomponents:httpasyncclient:4.1.5'
+	implementation 'org.apache.httpcomponents:httpcore-nio:4.4.16'
+	implementation 'jakarta.json:jakarta.json-api:2.1.3'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 tasks.named('test') {
