--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 	implementation('org.elasticsearch.client:elasticsearch-rest-client:8.15.3') {
 		exclude group: 'commons-logging', module: 'commons-logging'
 	}
-	// implementation('co.elastic.clients:elasticsearch-java:8.15.3')
+	implementation('co.elastic.clients:elasticsearch-java:8.15.3')
 	
 	// Required for Elasticsearch Java client
 	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
