--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	// elastic search test
-	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
+	//implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
 }
 
 tasks.named('test') {
