--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,14 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.9'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.google.protobuf' version '0.9.4'
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.testcontainers:testcontainers-bom:1.19.8"
 	}
-	dependencies {
-		// Force Elasticsearch Java client to match server version 8.15.3
-		dependency "co.elastic.clients:elasticsearch-java:8.15.3"
-		dependency "org.elasticsearch.client:elasticsearch-rest-client:8.15.3"
-	}
+
 }
 
 group = 'com.make'
@@ -46,6 +43,14 @@ dependencies {
 	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
 	implementation 'jakarta.json:jakarta.json-api:2.1.3'
 	implementation 'org.glassfish:jakarta.json:2.0.1'
+	implementation 'org.springframework.data:spring-data-elasticsearch:5.4.2'
+	// gRPC dependencies
+	implementation 'net.devh:grpc-spring-boot-starter:3.1.0.RELEASE'
+	implementation 'io.grpc:grpc-protobuf:1.62.2'
+	implementation 'io.grpc:grpc-stub:1.62.2'
+	implementation 'com.google.protobuf:protobuf-java:3.25.3'
+	compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // For @Generated annotation
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
@@ -59,4 +64,31 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// Protobuf configuration
+protobuf {
+	protoc {
+		artifact = 'com.google.protobuf:protoc:3.25.3'
+	}
+	plugins {
+		grpc {
+			artifact = 'io.grpc:protoc-gen-grpc-java:1.62.2'
+		}
+	}
+	generateProtoTasks {
+		all()*.plugins {
+			grpc {}
+		}
+	}
+}
+
+// Configure source sets for generated code
+sourceSets {
+	main {
+		java {
+			srcDirs 'build/generated/source/proto/main/grpc'
+			srcDirs 'build/generated/source/proto/main/java'
+		}
+	}
 }
