--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ dependencyManagement {
 	imports {
 		mavenBom "org.testcontainers:testcontainers-bom:1.19.8"
 	}
-
 }
 
 group = 'com.make'
@@ -38,12 +37,19 @@ dependencies {
 		exclude group: 'co.elastic.clients', module: 'elasticsearch-java'
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
 	// Elasticsearch 8.15.3 Java client dependencies - explicit versions
 	implementation 'co.elastic.clients:elasticsearch-java:8.15.3'
 	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.15.3'
 	implementation 'jakarta.json:jakarta.json-api:2.1.3'
 	implementation 'org.glassfish:jakarta.json:2.0.1'
 	implementation 'org.springframework.data:spring-data-elasticsearch:5.4.2'
+	
+	// Keycloak admin client (optional - only if you need to manage Keycloak programmatically)
+	implementation 'org.keycloak:keycloak-admin-client:25.0.6'
+	
 	// gRPC dependencies
 	implementation 'net.devh:grpc-spring-boot-starter:3.1.0.RELEASE'
 	implementation 'io.grpc:grpc-protobuf:1.62.2'
