--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,9 +62,9 @@ services:
       retries: 5
 
   keycloak:
-    image: quay.io/keycloak/keycloak:26.1.0
+    image: quay.io/keycloak/keycloak:26.3.3
     container_name: side-keycloak
-    command: start-dev
+    command: start-dev --import-realm
     environment:
       KC_DB: postgres
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
@@ -78,6 +78,8 @@ services:
       KC_HTTP_ENABLED: true
     ports:
       - "8180:8180"
+    volumes:
+      - ./keycloak/realm-aipub.json:/opt/keycloak/data/import/realm-aipub.json
     depends_on:
       postgres:
         condition: service_healthy
