--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:26.3.3
     container_name: side-keycloak
-    command: start-dev --import-realm
+    command: start --import-realm
     environment:
       KC_DB: postgres
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
@@ -79,16 +79,17 @@ services:
     ports:
       - "8180:8180"
     volumes:
-      - ./keycloak/realm-aipub.json:/opt/keycloak/data/import/realm-aipub.json
+      - ./keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json
     depends_on:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "exec 3<>/dev/tcp/localhost/8180 && echo -e 'GET /health/ready HTTP/1.1\\r\\nHost: localhost\\r\\n\\r\\n' >&3 && cat <&3 | grep -q '200 OK'"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 60s
+      # Keycloak /health/ready endpoint returns 200 when realm import is complete and service is ready
+      test: ["CMD-SHELL", "exec 3<>/dev/tcp/localhost/8180 && echo -e 'GET /health/ready HTTP/1.1\r\nHost: localhost\r\nConnection: close\r\n\r\n' >&3 && cat <&3 | grep -q '200 OK' && exec 3<&- || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 30
+      start_period: 180s  # Give Keycloak 3 minutes to start and import realms
 
 volumes:
   postgres_data:
