--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - xpack.security.enrollment.enabled=false
       - action.destructive_requires_name=false
+      - network.host=0.0.0.0
     ports:
       - "9200:9200"
       - "9300:9300"
